cli/tests/snapshots/golden_suite__lowering_recursor_vec.snap
---
source: cli/tests/golden_suite.rs
expression: output
---
DefEqConfig
  fuel: 100000
  source: default
  transparency: Reducible

ElaboratedDef vlen
  ty: Pi(Ind("Nat", []), Pi(App(Ind("Vec", []), Var(0)), Ind("Nat", []), Default, Fn), Default, Fn)
  val: Lam(Ind("Nat", []), Lam(App(Ind("Vec", []), Var(0)), App(App(App(App(App(Rec("Vec", [Succ(Zero)]), Lam(Ind("Nat", []), Lam(App(Ind("Vec", []), Var(0)), Ind("Nat", []), Default, Fn), Default, Fn)), Ctor("Nat", 0, [])), Lam(Ind("Nat", []), Lam(Ind("Nat", []), Lam(App(Ind("Vec", []), Var(1)), Lam(Ind("Nat", []), Ctor("Nat", 0, []), Default, FnOnce), Default, FnOnce), Default, FnOnce), Default, FnOnce)), Var(1)), Var(0)), Default, Fn), Default, Fn)

MirBody vlen
  Body { basic_blocks: [BasicBlockData { statements: [Assign(Place { local: Local(0), projection: [] }, Use(Constant(Constant { literal: Closure(7, []), ty: Closure(Region(1), [], [Nat], Fn([], [Adt(AdtId(Vec, 4342519251499682640), [])], Nat)) })))], terminator: Some(Goto { target: BasicBlock(1) }) }, BasicBlockData { statements: [], terminator: Some(Return) }], local_decls: [LocalDecl { ty: Fn([], [Nat], Fn([], [Adt(AdtId(Vec, 4342519251499682640), [])], Nat)), name: Some("_0"), is_prop: false, is_copy: true }], arg_count: 0, adt_layouts: AdtLayoutRegistry { layouts: {AdtId(Nat, 9339613782935747081): AdtLayout { adt: AdtId(Nat, 9339613782935747081), variants: [VariantLayout { ctor: CtorId { adt: AdtId(Nat, 9339613782935747081), index: 0 }, fields: [] }, VariantLayout { ctor: CtorId { adt: AdtId(Nat, 9339613782935747081), index: 1 }, fields: [Nat] }], copy_requirements: [[]] }, AdtId(Vec, 4342519251499682640): AdtLayout { adt: AdtId(Vec, 4342519251499682640), variants: [VariantLayout { ctor: CtorId { adt: AdtId(Vec, 4342519251499682640), index: 0 }, fields: [] }, VariantLayout { ctor: CtorId { adt: AdtId(Vec, 4342519251499682640), index: 1 }, fields: [Nat, Nat, Adt(AdtId(Vec, 4342519251499682640), [])] }], copy_requirements: [[Nat]] }} } }

BorrowCheck vlen
  ok
  evidence:
    regions:
      (none)
    loans:
      (none)
    runtime_checks:
      (none)
