cli/tests/snapshots/golden_suite__macro_surface_forms.snap
---
source: cli/tests/golden_suite.rs
expression: output
---
DefEqConfig
  fuel: 100000
  source: default
  transparency: Reducible

ElaboratedDef open
  ty: Const("Dyn", [])
  val: Const("dyn_code", [])

ElaboratedDef secret
  ty: Const("Dyn", [])
  val: Const("dyn_code", [])

ElaboratedDef uses_eval
  ty: Const("Dyn", [])
  val: App(App(Const("eval", []), Const("dyn_code", [])), Const("dyn_cap", []))

MirBody open
  Body { basic_blocks: [BasicBlockData { statements: [Assign(Place { local: Local(0), projection: [] }, Use(Constant(Constant { literal: Unit, ty: Opaque("const Dyn") })))], terminator: Some(Goto { target: BasicBlock(1) }) }, BasicBlockData { statements: [], terminator: Some(Return) }], local_decls: [LocalDecl { ty: Opaque("const Dyn"), name: Some("_0"), is_prop: true, is_copy: false }], arg_count: 0, adt_layouts: AdtLayoutRegistry { layouts: {AdtId(False, 6713900616313185601): AdtLayout { adt: AdtId(False, 6713900616313185601), variants: [], copy_requirements: [[]] }} } }

MirBody secret
  Body { basic_blocks: [BasicBlockData { statements: [Assign(Place { local: Local(0), projection: [] }, Use(Constant(Constant { literal: Unit, ty: Opaque("const Dyn") })))], terminator: Some(Goto { target: BasicBlock(1) }) }, BasicBlockData { statements: [], terminator: Some(Return) }], local_decls: [LocalDecl { ty: Opaque("const Dyn"), name: Some("_0"), is_prop: true, is_copy: false }], arg_count: 0, adt_layouts: AdtLayoutRegistry { layouts: {AdtId(False, 6713900616313185601): AdtLayout { adt: AdtId(False, 6713900616313185601), variants: [], copy_requirements: [[]] }} } }

MirBody uses_eval
  Body { basic_blocks: [BasicBlockData { statements: [Assign(Place { local: Local(0), projection: [] }, Use(Constant(Constant { literal: Unit, ty: Opaque("const Dyn") })))], terminator: Some(Goto { target: BasicBlock(1) }) }, BasicBlockData { statements: [], terminator: Some(Return) }], local_decls: [LocalDecl { ty: Opaque("const Dyn"), name: Some("_0"), is_prop: true, is_copy: false }], arg_count: 0, adt_layouts: AdtLayoutRegistry { layouts: {AdtId(False, 6713900616313185601): AdtLayout { adt: AdtId(False, 6713900616313185601), variants: [], copy_requirements: [[]] }} } }

BorrowCheck open
  ok
  evidence:
    regions:
      (none)
    loans:
      (none)
    runtime_checks:
      (none)

BorrowCheck secret
  ok
  evidence:
    regions:
      (none)
    loans:
      (none)
    runtime_checks:
      (none)

BorrowCheck uses_eval
  ok
  evidence:
    regions:
      (none)
    loans:
      (none)
    runtime_checks:
      (none)

AxiomDependencies Dyn
  axioms: ["Dyn"]
  classical: []

AxiomDependencies EvalCap
  axioms: ["EvalCap"]
  classical: []

AxiomDependencies classical_choice
  axioms: ["classical_choice"]
  classical: ["classical_choice"]

AxiomDependencies classical_em
  axioms: ["classical_em"]
  classical: ["classical_em"]

AxiomDependencies dyn_cap
  axioms: ["EvalCap", "dyn_cap"]
  classical: []

AxiomDependencies dyn_code
  axioms: ["Dyn", "dyn_code"]
  classical: []

AxiomDependencies eval
  axioms: ["Dyn", "EvalCap", "eval"]
  classical: []

AxiomDependencies open
  axioms: ["Dyn", "dyn_code"]
  classical: []

AxiomDependencies secret
  axioms: ["Dyn", "dyn_code"]
  classical: []

AxiomDependencies uses_eval
  axioms: ["Dyn", "EvalCap", "dyn_cap", "dyn_code", "eval"]
  classical: []
