cli/tests/snapshots/golden_suite__match_let_shadow.snap
---
source: cli/tests/golden_suite.rs
expression: output
---
DefEqConfig
  fuel: 100000
  source: default
  transparency: Reducible

ElaboratedDef shadow_let
  ty: Ind("Nat", [])
  val: LetE(Ind("Nat", []), App(Ctor("Nat", 1, []), Ctor("Nat", 0, [])), LetE(Ind("Nat", []), App(Ctor("Nat", 1, []), Var(0)), Var(0)))

ElaboratedDef shadow_match
  ty: Pi(Ind("Nat", []), Ind("Nat", []), Default, Fn)
  val: Lam(Ind("Nat", []), LetE(Ind("Nat", []), App(Ctor("Nat", 1, []), Var(0)), App(App(App(App(Rec("Nat", [Succ(Zero)]), Lam(Ind("Nat", []), Ind("Nat", []), Default, Fn)), Var(0)), Lam(Ind("Nat", []), Lam(Ind("Nat", []), LetE(Ind("Nat", []), Var(1), Var(0)), Default, FnOnce), Default, FnOnce)), Var(0))), Default, Fn)

MirBody shadow_let
  Body { basic_blocks: [BasicBlockData { statements: [StorageLive(Local(1)), Assign(Place { local: Local(1), projection: [] }, Use(Constant(Constant { literal: Nat(1), ty: Nat })))], terminator: Some(Goto { target: BasicBlock(2) }) }, BasicBlockData { statements: [StorageDead(Local(4)), StorageDead(Local(3)), StorageDead(Local(2)), StorageDead(Local(1))], terminator: Some(Return) }, BasicBlockData { statements: [StorageLive(Local(2)), StorageLive(Local(3)), Assign(Place { local: Local(3), projection: [] }, Use(Constant(Constant { literal: InductiveCtor(CtorId { adt: AdtId(Nat, 9339613782935747081), index: 1 }, 1, 1), ty: Unit })))], terminator: Some(Goto { target: BasicBlock(5) }) }, BasicBlockData { statements: [StorageDead(Local(1))], terminator: Some(Goto { target: BasicBlock(1) }) }, BasicBlockData { statements: [Assign(Place { local: Local(0), projection: [] }, Use(Copy(Place { local: Local(2), projection: [] })))], terminator: Some(Goto { target: BasicBlock(8) }) }, BasicBlockData { statements: [StorageLive(Local(4)), Assign(Place { local: Local(4), projection: [] }, Use(Copy(Place { local: Local(1), projection: [] })))], terminator: Some(Goto { target: BasicBlock(6) }) }, BasicBlockData { statements: [], terminator: Some(Call { func: Borrow(Shared, Place { local: Local(3), projection: [] }), args: [Copy(Place { local: Local(4), projection: [] })], destination: Place { local: Local(2), projection: [] }, target: Some(BasicBlock(7)) }) }, BasicBlockData { statements: [StorageDead(Local(4)), StorageDead(Local(3))], terminator: Some(Goto { target: BasicBlock(4) }) }, BasicBlockData { statements: [StorageDead(Local(2))], terminator: Some(Goto { target: BasicBlock(3) }) }], local_decls: [LocalDecl { ty: Nat, name: Some("_0"), is_prop: false, is_copy: true }, LocalDecl { ty: Nat, name: None, is_prop: false, is_copy: true }, LocalDecl { ty: Nat, name: None, is_prop: false, is_copy: true }, LocalDecl { ty: Fn([], [Nat], Nat), name: None, is_prop: false, is_copy: false }, LocalDecl { ty: Nat, name: None, is_prop: false, is_copy: true }], arg_count: 0, adt_layouts: AdtLayoutRegistry { layouts: {AdtId(Nat, 9339613782935747081): AdtLayout { adt: AdtId(Nat, 9339613782935747081), variants: [VariantLayout { ctor: CtorId { adt: AdtId(Nat, 9339613782935747081), index: 0 }, fields: [] }, VariantLayout { ctor: CtorId { adt: AdtId(Nat, 9339613782935747081), index: 1 }, fields: [Nat] }], copy_requirements: [[]] }} } }

MirBody shadow_match
  Body { basic_blocks: [BasicBlockData { statements: [Assign(Place { local: Local(0), projection: [] }, Use(Constant(Constant { literal: Closure(3, []), ty: Closure(Region(1), [], [Nat], Nat) })))], terminator: Some(Goto { target: BasicBlock(1) }) }, BasicBlockData { statements: [], terminator: Some(Return) }], local_decls: [LocalDecl { ty: Fn([], [Nat], Nat), name: Some("_0"), is_prop: false, is_copy: true }], arg_count: 0, adt_layouts: AdtLayoutRegistry { layouts: {AdtId(Nat, 9339613782935747081): AdtLayout { adt: AdtId(Nat, 9339613782935747081), variants: [VariantLayout { ctor: CtorId { adt: AdtId(Nat, 9339613782935747081), index: 0 }, fields: [] }, VariantLayout { ctor: CtorId { adt: AdtId(Nat, 9339613782935747081), index: 1 }, fields: [Nat] }], copy_requirements: [[]] }} } }

BorrowCheck shadow_let
  ok
  evidence:
    regions:
      (none)
    loans:
      (none)
    runtime_checks:
      (none)

BorrowCheck shadow_match
  ok
  evidence:
    regions:
      (none)
    loans:
      (none)
    runtime_checks:
      (none)
