cli/tests/snapshots/golden_suite__match_nested_let.snap
---
source: cli/tests/golden_suite.rs
expression: output
---
DefEqConfig
  fuel: 100000
  source: default
  transparency: Reducible

ElaboratedDef nested_match
  ty: Pi(Ind("Bool", []), Pi(Ind("Nat", []), Ind("Nat", []), Default, Fn), Default, Fn)
  val: Lam(Ind("Bool", []), Lam(Ind("Nat", []), App(App(App(App(Rec("Bool", [Succ(Zero)]), Lam(Ind("Bool", []), Ind("Nat", []), Default, Fn)), LetE(Ind("Nat", []), Var(0), App(Ctor("Nat", 1, []), Var(0)))), LetE(Ind("Nat", []), Ctor("Nat", 0, []), Var(0))), Var(1)), Default, Fn), Default, Fn)

MirBody nested_match
  Body { basic_blocks: [BasicBlockData { statements: [Assign(Place { local: Local(0), projection: [] }, Use(Constant(Constant { literal: Closure(1, []), ty: Closure(Region(1), [], [Bool], Fn([], [Nat], Nat)) })))], terminator: Some(Goto { target: BasicBlock(1) }) }, BasicBlockData { statements: [], terminator: Some(Return) }], local_decls: [LocalDecl { ty: Fn([], [Bool], Fn([], [Nat], Nat)), name: Some("_0"), is_prop: false, is_copy: true }], arg_count: 0, adt_layouts: AdtLayoutRegistry { layouts: {AdtId(Bool, 1212688576893102294): AdtLayout { adt: AdtId(Bool, 1212688576893102294), variants: [VariantLayout { ctor: CtorId { adt: AdtId(Bool, 1212688576893102294), index: 0 }, fields: [] }, VariantLayout { ctor: CtorId { adt: AdtId(Bool, 1212688576893102294), index: 1 }, fields: [] }], copy_requirements: [[]] }, AdtId(Nat, 9339613782935747081): AdtLayout { adt: AdtId(Nat, 9339613782935747081), variants: [VariantLayout { ctor: CtorId { adt: AdtId(Nat, 9339613782935747081), index: 0 }, fields: [] }, VariantLayout { ctor: CtorId { adt: AdtId(Nat, 9339613782935747081), index: 1 }, fields: [Nat] }], copy_requirements: [[]] }} } }

BorrowCheck nested_match
  ok
  evidence:
    regions:
      (none)
    loans:
      (none)
    runtime_checks:
      (none)
